[package]
name = "distribution-server"
version = "0.1.0"
authors = ["Ole Umlauft <ole.umlauft@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
reqwest = { version = "0.11.2", features = ["blocking", "json", "cookies"] }
lazy_static = "1.4.0"
rand = "0.8.3"
