[package]
name = "distribution-server"
version = "0.1.0"
authors = ["Ole Umlauft <ole.umlauft@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
reqwest = { version = "0.11.2", features = ["blocking", "json", "cookies"] }
lazy_static = "1.4.0"
rand = "0.8.3"
regex = "1"
lxd = { git = "https://github.com/oleuml/lxd-rs" }
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart = { path = "../smart" }